--- a/src/sass/main.Sass
+++ b/src/sass/main.Sass
@@ -1,4 +1,8 @@
-@import 'testing'
- 
-body
-    background-color: pink
+@import './Nav/nav'
+
+html, body
+    width: 100%
+    height: 100%
+    background-color: #59484b
+    font-family: Helvetica
+    color: #3D2A4C
