--- a/src/sass/main.Sass
+++ b/src/sass/main.Sass
@@ -1,8 +1,18 @@
+@import './colors'
 @import './Nav/nav'
 
 html, body
     width: 100%
     height: 100%
-    background-color: #59484b
+    background-color: $bg-color
     font-family: Helvetica
-    color: #3D2A4C
+    color: $purple
+    &::-webkit-scrollbar
+        display: none
+.content
+    width: 80%
+    margin: 0 auto
+    height: 2000px
+    background-color: $white
+    margin-top: 60px
+    padding: 0 5px 0 5px 
