--- a/main.css
+++ b/main.css
@@ -1,5 +1,35 @@
-h1 {
-  color: teal; }
+.rd-navbar {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: #3D2A4C;
+  color: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin: 0; }
+  .rd-navbar div ul {
+    list-style: none; }
+    .rd-navbar div ul li {
+      float: left;
+      margin-right: 10px;
+      font-size: 16px; }
+      .rd-navbar div ul li:hover {
+        cursor: pointer;
+        color: #5fb3b8; }
 
-body {
-  background-color: pink; }
+html, body {
+  width: 100%;
+  height: 100%;
+  background-color: #59484b;
+  font-family: Helvetica;
+  color: #3d2a4c; }
+  html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none; }
+
+.content {
+  width: 80%;
+  margin: 0 auto;
+  height: 2000px;
+  background-color: #fff;
+  margin-top: 60px;
+  padding: 0 5px 0 5px; }
