--- a/src/sass/colors.sass
+++ b/src/sass/colors.sass
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster')
+
 $teal: #5fb3b8
 $purple: #3d2a4c
 $rose: #523249
 $bg-color: #59484b
 $grey: #969696
 $white: #fff
+
+$lobster: 'Lobster', cursive;
