--- a/src/sass/main.Sass
+++ b/src/sass/main.Sass
@@ -1,5 +1,6 @@
 @import './colors'
 @import './Nav/nav'
+@import './Dashboard/dashboard'
 
 html, body
     width: 100%
@@ -10,9 +11,8 @@ html, body
     &::-webkit-scrollbar
         display: none
 .content
-    width: 80%
+    width: 90%
     margin: 0 auto
-    height: 2000px
     background-color: $white
-    margin-top: 60px
-    padding: 0 5px 0 5px 
+    margin-top: 70px
+    padding: 5px
