--- a/src/sass/main.Sass
+++ b/src/sass/main.Sass
@@ -1,6 +1,7 @@
 @import './colors'
 @import './Nav/nav'
 @import './Dashboard/dashboard'
+@import './Card/card'
 
 html, body
     width: 100%
@@ -13,6 +14,5 @@ html, body
 .content
     width: 90%
     margin: 0 auto
-    background-color: $white
-    margin-top: 70px
+    margin-top: 80px
     padding: 5px
