--- a/src/sass/Card/card.sass
+++ b/src/sass/Card/card.sass
@@ -1,8 +1,47 @@
-.my-card-top
+.my-card
     width: 100%
-    background-color: $white
     min-height: 200px
+    border-radius: 10px 0 10px 10px
+    font-weight: 600
 .name-letter
     width: 100px
     float: right
     background: $blue
+    text-align: center
+    border-top-left-radius: 10px
+    border-top-right-radius: 10px
+    margin-top: -22px
+    font-size: 16px
+    font-family: Arial, Helvetica, sans-serif
+    color: $white
+    font-weight: 700
+.divider
+    height: 75px
+    width: 10px
+    background-color: $grey
+    margin-left: 32%
+    display: inline-block
+    margin-top: -25px
+.card-bottom
+    background-color: $blue
+    margin-top: -40px
+.card-top
+    background-color: $white
+    margin-top: 10px
+    padding-bottom: 25px
+    padding-left: 10px
+    .panel
+        width: 340px
+        margin: 0 auto
+        margin-bottom: 10px
+    img
+        margin: 0 auto
+        min-width: 320px
+        min-height: 320px
+        width: 320px
+        height: 320px
+        background-position: center
+        background-image-size: 100%
+        background-image: url('https://picsum.photos/400')
+        margin-bottom: 10px
+        margin-top: 25px
