--- a/src/sass/Card/card.sass
+++ b/src/sass/Card/card.sass
@@ -1,3 +1,6 @@
+.card-page
+    max-width: 1267px
+    margin: 0 auto
 .my-card
     width: 100%
     min-height: 200px
@@ -25,6 +28,8 @@
 .card-bottom
     background-color: $blue
     margin-top: -40px
+    border-top-right-radius: 10px
+    padding: 50px 10px 10px 10px
 .card-top
     background-color: $white
     margin-top: 10px
@@ -34,6 +39,9 @@
         width: 340px
         margin: 0 auto
         margin-bottom: 10px
+        float: right
+        margin-right: 25px
+        margin-top: 10px
     img
         margin: 0 auto
         min-width: 320px
@@ -45,3 +53,21 @@
         background-image: url('https://picsum.photos/400')
         margin-bottom: 10px
         margin-top: 25px
+.user-card
+    width: 300px
+    height: 150px
+    background-color: $grey
+    margin-bottom: 10px
+    &.flipped
+        width: 150px
+        height: 300px
+.user-info
+    width: auto
+    padding: 1px 5px 5px 5px
+    min-width: 320px
+    min-height: 200px
+    background-color: $white
+    h4
+        font-weight: 300
+        a, a:visited
+            color: $pink
