--- a/src/sass/Card/card.sass
+++ b/src/sass/Card/card.sass
@@ -49,7 +49,6 @@
         height: 320px
         background-position: center
         background-image-size: 100%
-        background-image: url('https://picsum.photos/400')
         margin-bottom: 10px
         margin-top: 25px
 .user-card
@@ -94,6 +93,7 @@
     background-color: #7871AA
 .front
     background-color: #4E5283
+    z-index: 1
 .flipped, .flipped img
     width: 150px
     height: 300px
