First Iteration finished
* Updated Dashboard
* Uploaded images
* Changed Routes to HashRouter
* Updated dashboard styles

--- a/src/sass/Card/card.sass
+++ b/src/sass/Card/card.sass
@@ -90,7 +90,7 @@
     left: 0
 .back img
     transform: rotateY(180deg)
-    background-color: #7871AA
+    background-color: $purple
 .front
     background-color: #4E5283
     z-index: 1
