--- a/src/sass/Dashboard/dashboard.sass
+++ b/src/sass/Dashboard/dashboard.sass
@@ -1,5 +1,19 @@
 .content .container
     margin: 0 auto
+.mast-bg
+    height: 400px
+    background: linear-gradient(180deg, $purple 20%, $teal)
+    color: $white
+    h1
+        padding-top: 20%
+        i
+            font-size: 200%
+            padding-bottom: 5%
+    a
+        color: $purple
+        text-decoration: none
+        &:hover
+            color: $rose
 .portal
     outline-color: $grey
     outline-width: 1px
